--- a/src/components/playground/playground.styl
+++ b/src/components/playground/playground.styl
@@ -3,14 +3,13 @@
   padding: 20px;
 
   h2 {
-    font-size: 24px;
+    font-size: 20px;
     height: 40px;
-    line-height: 30px;
+    line-height: 40px;
     margin: 0 0 30px 0;
-    border-bottom: 2px solid #eee;
 
     small {
-      font-size: 14px;
+      font-size: 12px;
       color: #999;
       margin-left: 20px;
     }
@@ -46,7 +45,7 @@
 
     iframe {
       width: 600px;
-      height calc(100vh - 120px);
+      height: calc(100vh - 120px);
       display: block;
       border: 1px solid #eee;
       float: left;
@@ -59,8 +58,22 @@
   }
 }
 
-.demo {
+.example {
   font-size: 16px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    width: 1px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #3779ff;
+  }
 
   .wrapper {
     padding: 20px;
