--- a/src/components/playground/playground.styl
+++ b/src/components/playground/playground.styl
@@ -1,3 +1,4 @@
+
 .site {
   color: #444;
   padding: 20px;
@@ -77,6 +78,30 @@
 
   .wrapper {
     padding: 20px;
+    overflow-x: hidden;
+
+    .affix-content, .affix-content2 {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      left: 0;
+      width: 100%;
+      height: 88px;
+      background: linear-gradient(187deg, rgba(109, 201, 254, 1) 0%, rgba(59, 152, 252, 1) 100%);
+      box-shadow: 0px 6px 12px 0px rgba(204, 204, 204, 1);
+      border-radius: 8px;
+      transition: height .3s;
+
+      .item {
+        color: #fff;
+      }
+
+      &.fixed {
+        width: 100vw;
+        height: 44px;
+        left: 0;
+      }
+    }
   }
 
   .lang {
