--- a/src/components/list-item/list-item.h5.styl
+++ b/src/components/list-item/list-item.h5.styl
@@ -1,5 +1,6 @@
 $sideSpace = rem(30px);
 $itemHeight = rem(88px);
+$itemHeight120 = rem(120px);
 
 .item {
   height: $itemHeight;
@@ -19,5 +20,9 @@ $itemHeight = rem(88px);
   &.both {
     margin: 0 $sideSpace;
     padding: 0;
+  }
+  
+  &.h120 {
+    height: $itemHeight120;
   }
 }
