--- a/src/components/list/list-item.h5.styl
+++ b/src/components/list/list-item.h5.styl
@@ -1,18 +1,8 @@
-$sideSpace = rem(30px);
-$itemHeight = rem(88px);
+
 
 .space {
-  &.s {
-    margin-top: rem(10px);
-  }
-
-  &.m {
-    margin-top: rem(20px);
-  }
-
-  &.l {
-    margin-top: rem(30px);
-  }
+  display: flex;
+  align-items: center;
 }
 
 .list {
