海通富文本增加资讯类型

--- a/src/components/ht-richtext/demo.html
+++ b/src/components/ht-richtext/demo.html
@@ -46,14 +46,14 @@
 
     <h5>专题</h5>
     <ht-richtext-parser>
-      <p>{[subject|1000|华为CFO孟晚舟被逮捕，美方究竟意欲何为？|加拿大应美要求逮捕华为CEO，任正非女儿孟晚舟，中国驻加使馆孟晚舟，中国驻加使馆孟晚舟，中国的的的d...]}</p>
+      <p>{[subject2|1000|华为CFO孟晚舟被逮捕，美方究竟意欲何为？|加拿大应美要求逮捕华为CEO，任正非女儿孟晚舟，中国驻加使馆孟晚舟，中国驻加使馆孟晚舟，中国的的的d...]}</p>
     </ht-richtext-parser>
 
 
     <h5>评论专题</h5>
     <ht-richtext-parser>
       <p>这里评论内容，加拿大应美方要逮捕华为CFO，任正非女儿孟晚舟，中国中国驻加使馆强烈抗议抗议抗议抗议抗议抗议抗议...
-      {[subject|1000|华为CFO孟晚舟被逮捕，美方究竟意欲何为？]}</p>
+      {[subject1|1000|华为CFO孟晚舟被逮捕，美方究竟意欲何为？]}</p>
     </ht-richtext-parser>
 
     <h5>话题</h5>
