--- a/src/components/search-bar/demo.html
+++ b/src/components/search-bar/demo.html
@@ -36,6 +36,9 @@
     searchBar.addEventListener('search', (data) => {
       console.log('输入关键字', data.detail.value);
     });
+    searchBar.addEventListener('focusChange', ({ detail }) => {
+      console.log('输入框激活状态', detail.isInputFocus);
+    });
   </script>
 </body>
 
