增加文字限制组件

--- a/src/components/tab/slide/demo.html
+++ b/src/components/tab/slide/demo.html
@@ -32,7 +32,9 @@
       <div class="item">选做</div>
       <div class="item">提醒</div>
     </nb-tab-slide>
+    <br>
     <nb-tab-slide
+      position="top"
     >
       <div class="item">必做</div>
       <div class="item">选做</div>
