--- a/src/components/upload/simple-image/simple-image.h5.styl
+++ b/src/components/upload/simple-image/simple-image.h5.styl
@@ -6,6 +6,8 @@
     margin-right: rem(20px);
     margin-bottom: rem(20px);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     position: relative;
 
     i {
